@@ -79,3 +79,5 @@ Version 0.0.1:
 78/ Removed Trinket of Perpetuation and made it into a artifact.
 79/ Fixed artifact selection panel scrolling being hard capped and not dynamically changed depending on current artifact amount.
 80/ Small fix toward buff missing texture and deleting no longer needed item localization.
+81/ Removed Trinket of Ample Perception and made it into a artifact.
+82/ Moved a variable from 1 global NPC class to main global NPC file and delete the unnecessary global class.
